<resources>
    <string name="app_name">SimpleCRUD</string>
    <string name="person.delete_button">Delete</string>
    <string name="person.update_button">Update</string>
    <string name="personform.name">Name</string>
    <string name="personform.save">save</string>
    <string name="personform.cancel">Cancel</string>
    <string name="personform.phone">Phone</string>
    <string name="personform.email">Email</string>
    <string name="personform.birthdate">Birthdate</string>
    <string name="personform.address">Address</string>
</resources>
