...
                android:padding="16dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/person_name"
                    android:layout_alignParentTop="true"
                    android:textSize="20sp"
                    />

                <TextView
                    android:layout_width="wrap_content"
...
